[tool.poetry]
name = "auto-safe-mobile"
version = "0.1.0"
description = ""
authors = ["Paulo Martins <paulo.martins@viz.ai>"]
readme = "README.md"
packages = [{include = "auto_safe_mobile"}]

[tool.poetry.dependencies]
python = "3.11.6"
opencv-python = "^4.9.0.80"
numpy = "^1.24.3"
keras = "2.13.1"
tensorflow = "2.13.0"
pydantic = "1.10.13"
tensorflow-macos = "2.13.1"
pygame = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
